--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -13,7 +13,7 @@
         <div class="admin-logo">Admin Panel</div>
         <nav class="admin-nav">
             <a href="{{ url_for('admin_panel') }}"><i class="fa fa-dashboard"></i> Dashboard</a>
-            <a href="{{ url_for('flask_admin.index') }}"><i class="fa fa-cogs"></i> Pełny Panel</a>
+            <a href="{{ url_for('admin.index') }}"><i class="fa fa-cogs"></i> Pełny Panel</a>
             <a href="{{ url_for('auth.logout') }}"><i class="fa fa-sign-out"></i> Wyloguj</a>
         </nav>
     </header>
